finished small codeup design

--- a/sm-codeup-design.html
+++ b/sm-codeup-design.html
@@ -117,10 +117,25 @@
         }
         #security-img{
             margin-top: 10em;
+            border-radius: 5%;
+            border: 8px solid #e6e6e6;
         }
         #man-img{
             margin-top: 10em;
         }
+        #apple-ipad{
+            border-radius: 5%;
+            border:  8px solid #e6e6e6;
+        }
+        #man-img{
+            border-radius: 5%;
+            border: 8px solid #e6e6e6
+        }
+        #mackbook-img{
+            border-radius: 5%;
+            border: 8px solid #e6e6e6
+        }
+
     </style>
 </head>
 <body>
@@ -180,20 +195,13 @@
 
 
 
-<!--        <div class="cir-3-4">-->
-<!--            <button type="button" class="btn mr-5" id="cir-3">SUPPORT</button>-->
-<!--            <button type="button" class="btn" id="cir-4">HOST</button>-->
-<!--        </div>-->
-<!--    </div>-->
-
-
     <div class="selected-work mt-5">
         <div>SELECTED WORK</div>
     </div>
 
     <div class="row">
         <div class="col-3 mt-5 p-0 offset-sm-3">
-            <img src="img/apple-ipad.jpg" width=205px height=205px alt="design-logo">
+            <img src="img/apple-ipad.jpg" width=205px height=205px alt="design-logo" id="apple-ipad">
                 <div class="featured-project-1">
                     <div>FEATURED PROJECT
                         <button type="button" class="btn" id="dot-1">D</button>
@@ -213,7 +221,7 @@
                 </div>
         </div>
         <div class="col-3 mt-5 p-0">
-            <img src="img/macbook.jpg" width=205px height=205px alt="design-logo">
+            <img src="img/macbook.jpg" width=205px height=205px alt="design-logo" id="mackbook-img">
             <div class="featured-project-3">
                 <div>FEATURED PROJECT
                     <button type="button" class="btn" id="dot-1">D</button>
